--- a/index.html
+++ b/index.html
@@ -1,87 +1,94 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8" />
-    <title>Scarica la vCard di Secondo del Favero </title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-            padding: 1em;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Scarica la vCard di Secondo del Favero</title>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      text-align: center;
+      padding: 2em 1em;
+    }
 
-        h1 {
-            font-size: 1.8em;
-            margin-bottom: 0.2em;
-        }
+    h1 {
+      font-size: 2.2em;
+      margin-bottom: 0.4em;
+      color: #333;
+    }
 
-        p {
-            margin: 0.5em 0;
-        }
+    p {
+      font-size: 1.2em;
+      margin: 1em 0;
+      color: #555;
+    }
 
-        img {
-            width: 120px;
-            height: auto;
-            border-radius: 50%;
-            margin: 1em 0;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
+    img {
+      width: 160px;
+      height: auto;
+      border-radius: 50%;
+      margin: 1.5em 0;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
+    }
 
-        button {
-            padding: 16px 32px;
-            font-size: 1em;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-top: 1em;
-        }
+    button {
+      padding: 18px 36px;
+      font-size: 1.2em;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      margin-top: 1.2em;
+    }
 
-        button:hover {
-            background-color: #0056b3;
-        }
+    button:hover {
+      background-color: #0056b3;
+    }
 
-        a {
-            text-decoration: none;
-            color: #007BFF;
-        }
+    a {
+      font-size: 1.1em;
+      text-decoration: none;
+      color: #007BFF;
+      display: inline-block;
+      margin-top: 1em;
+    }
 
-        a:visited {
-            color: #0056b3;
-        }
-    </style>
+    a:visited {
+      color: #0056b3;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Contatto: Secondo Del Favero </h1>
-<p id="msg">Caricamento ...</p>
-<img src="delfavero.jpg" alt="Foto di Secondo del Favero">
-<div id="action"></div>
-<p><a href="delfavero.vcf" download>Scarica la vCard manualmente</a></p>
+  <h1>Contatto: Secondo Del Favero</h1>
+  <p id="msg">Caricamento ...</p>
+  <img src="delfavero.jpg" alt="Foto di Secondo del Favero">
+  <div id="action"></div>
+  <p><a href="delfavero.vcf" download>Scarica la vCard manualmente</a></p>
 
-<script>
+  <script>
     window.onload = function () {
-        const actionDiv = document.getElementById('action');
-        const msg = document.getElementById('msg');
-        const vcardLink = "delfavero.vcf";
+      const actionDiv = document.getElementById('action');
+      const msg = document.getElementById('msg');
+      const vcardLink = "delfavero.vcf";
 
-        msg.textContent = "Tocca il pulsante per aprire la vCard e aggiungerla ai contatti.";
+      msg.textContent = "Tocca il pulsante per aprire la vCard e aggiungerla ai contatti.";
 
-        actionDiv.innerHTML = `
-      <a href="${vcardLink}" target="_blank" >
-        <button>Apri vCard</button>
-      </a>`;
+      actionDiv.innerHTML = `
+        <a href="${vcardLink}" target="_blank">
+          <button>Apri vCard</button>
+        </a>`;
     };
-</script>
+  </script>
 
 </body>
 </html>
